customize generated swagger ex, reverse url
