# chat-service/src/server/swagger_output.json
@@ -2,18 +2,28 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "Chat Service",
+    "description": "Chat Service API"
   },
-  "host": "localhost:3000",
+  "host": "localhost:7000/api/chat",
   "basePath": "/",
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {},
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/chat-rooms": {
       "post": {
-        "description": "",
+        "tags": [
+          "ChatRoom"
+        ],
+        "description": "Create a chat room",
         "parameters": [
           {
             "name": "body",
@@ -41,7 +51,10 @@
         }
       },
       "get": {
-        "description": "",
+        "tags": [
+          "ChatRoom"
+        ],
+        "description": "List all chat rooms",
         "responses": {
           "200": {
             "description": "OK"
@@ -52,21 +65,132 @@
         }
       }
     },
-    "/messages": {
-      "post": {
-        "description": "",
+    "/chat-rooms/{id}/users": {
+      "get": {
+        "tags": [
+          "ChatRoom"
+        ],
+        "description": "List all users in a chat room",
         "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ChatRoom"
+        ],
+        "description": "Add a user to a chat room",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "chatRoomId": {
+                "userId": {
                   "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/chat-rooms/{id}/users/{userId}": {
+      "delete": {
+        "tags": [
+          "ChatRoom"
+        ],
+        "description": "Delete a user from a chat room",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/messages": {
+      "post": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Send a message to a chat room",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "required": [
+                "chatRoomId",
+                "content"
+              ],
+              "properties": {
+                "chatRoomId": {
+                  "type": "string",
+                  "example": "123e4567-e89b-12d3-a456-426655440000"
                 },
                 "content": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Hello, world!"
                 }
               }
             }
@@ -88,14 +212,70 @@
         }
       }
     },
-    "/chat-rooms/{id}/messages": {
-      "get": {
-        "description": "",
+    "/messages/{id}": {
+      "delete": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Delete a message from a chat room",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/chat-rooms/{id}/messages": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "description": "List all messages in a chat room",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "List all users",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
             "type": "string"
           }
         ],
